Se ha completado la página

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
- <style>
+/* Global Styles */
         * {
             margin: 0;
             padding: 0;
@@ -466,4 +466,3 @@
                 font-size: 2rem;
             }
         }
-    </style>
